      syntax with the AT (@) sign.  For example, mptransfer $n hassan@midgaard#3001
  16. New Fighter skill: Weapon Sharpening (for a small damage bonus)
  17. Containers of all sorts now expose modifiable "open delay ticks".
  18. Ship Component Tech install skill (AstroEngineering) done-ish... like all tech, it's subject to change without notice.
   *. some way to reposition planets? esp relative to nearby ones
   *. create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough.
   *. MoneyChanger/Banker behavior to discount currency by its distant origin (farther planet is from origin of currency, less its worth).
   *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
   *. entry systems for ships (default entry key card, voice code, identifying scanner)
   *. make ship sensor systems
   *. make tractor beam system -- esp important for pirates!
   *. make ship shield systems murder motel again -- some good against phasers, some torpedos, some lasers
   *. make ship phaser, laser systems murder motel again
   *. make ship torpedo launchers and torpedo containers
   *. make ship impulse and warp engines
   *. make ship dampeners
   *. engines should have max turn thrust, different from max thrust
   *. finish main ship software for controlling all this stuff
   *. add electronics to guides, how to make a ship, details about tech
   *. add electronics to MG
   *. retest private libs, private dbtables, private classes, private area objects, private players
   *. OLC for players?  Play with PennMush more. Port 4201
    
# Build 5.8.1 Release 3/14/2014
   0. **** Database Schema Changes Were Made **** Make sure you follow the Installation Guide to upgrade your database. 
   1. QuestManager "STEP"ping feature now supports "STEP AUTO" to have steps proceed based on duration instead of MOBPROG triggers.