@@ -19,8 +19,9 @@
   16. New Fighter skill: Weapon Sharpening (for a small damage bonus)
   17. Containers of all sorts now expose modifiable "open delay ticks".
   18. Ship Component Tech install skill (AstroEngineering) done-ish... like all tech, it's subject to change without notice.
-   *. some way to reposition planets? esp relative to nearby ones
-   *. create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough.
+   *. some way to reposition planets? esp relative to nearby ones.  Also, ability to list objects in space.
+   *. create space objects, esp stars.  planets should be thin areas, solar systems are triggered 
+        to load when players fly near enough.  Modify solar systems.  Destroy solar systems. etc.
    *. MoneyChanger/Banker behavior to discount currency by its distant origin (farther planet is from origin of currency, less its worth).
    *. personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
    *. entry systems for ships (default entry key card, voice code, identifying scanner)
